[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xlsx-export-mcp"
version = "1.0.0"
description = "Simple XLSX export MCP server (no persistence)"
authors = [
    {name = "Nicholas Leao", email = "nicholas@protex.ai"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "openpyxl>=3.0.0",
]

[project.scripts]
xlsx-export-mcp = "xlsx_export_mcp.server:cli_main"

[project.urls]
Homepage = "https://github.com/NicholasLeao/xlsx-export-mcp"
Repository = "https://github.com/NicholasLeao/xlsx-export-mcp.git"

[tool.hatch.build.targets.wheel]
packages = ["src/xlsx_export_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/pyproject.toml",
]